# VIVT

ProgrammingBasis/: Seminar_10_variant_5_Volkov.cpp  Seminar_3_variant_5_Volkov.cpp  Seminar_6_variant_5_Volkov.cpp
Testing/autotest/: .gitignore  pyproject.toml
Testing/autotest/classes/: complex.py  person_data.py
