[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autotest"
description = "Проект для предмета 'Тестирование'"
authors = [
	{ name="Юрий Волков", email="atribolt@gmail.com" }
]
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "pytest~=7.4.3",
	"PyYaml~=6.0.1"
]

[tool.setuptools.packages.find]
include = ["classes"]
namespaces = false
